fix z-index

--- a/dproject/static/css/base.css
+++ b/dproject/static/css/base.css
@@ -9235,7 +9235,7 @@ html {
   top: 0rem;
   left: .5rem;
   width: 100%;
-  z-index: 1000;
+  z-index: 9;
   font-weight: 500;
   font-size: 1.5rem;
   color: var(--bs-white);
